# jobs_ai

./: .env.example  .gitignore  AGENTS.md  README.md  boards.txt  env.txt  jobs_ai.code-workspace  pyproject.toml  requirements.txt
chatgpt_sources_core_v2/: README.md
docs/: README.md  applicant_profile.example.json  architecture.md
legacy_resume_materials/: 2025_basic_text_resume.txt  2025_basic_text_resume_final.txt  2025_basic_text_resume_improved.txt  2026_basic_resume_updated.txt  2026_text_resume.txt  apps_script_basic_resume_patch_final.gs  apps_script_basic_resume_patch_v1.gs  apps_script_basic_resume_patch_v2.gs  apps_script_resume_patch_v2.txt  apps_script_resume_patch_v3.txt  apps_script_resume_patch_v4.txt  doc_id.txt
raw_job_descriptions/: Analytics Engineer II_Alma.txt  Contractor: Lead Analytics Engineer - Data Team_newsela.txt  Keeper Security.txt  Payment Analytics Engineer_highnote.txt  Senior Analytics Engineer - Auto Integrate.txt  Staff Product Analytics Engineer_runway.txt  online_db_status.txt
resume/: #code.js  resume_template.gs
scripts/: README.md  board_job_count.py  build_ats_seed_list.py  build_chatgpt_sources.py  build_sources_pack.py  quick_push.sh
tests/: test_application_assist.py  test_application_log.py  test_application_prefill.py  test_application_tracking.py  test_apply.py  test_board_census.py  test_board_job_count_script.py  test_collect.py  test_db.py  test_db_merge.py  test_db_postgres.py  test_discover.py  test_fast_apply.py  test_import.py  test_job_reference_cli.py  test_launch_dry_run.py  test_launch_executor.py  (+22 more)
(+151 files in other folders)
