[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobs-ai"
version = "1.0.0"
description = "Pragmatic local job application exoskeleton for technical job searches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9,<3.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
jobs-ai = "jobs_ai.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
